2007-08-13  Tjark Weber

	* asttools/ast_util.ml: tuned

2007-08-13  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * merge upstream, versions 
          elsa-stack: 9 smbase: 492 ast: 282 elkhound: 1045 elsa: 2481
        * new cType variant:
          DependentSizeArrayType of 'a * 'a cType * 'a expression_type

2007-08-13  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * delete new files from upstream import

        * revert conversion-branch merge: the changes go to
          olmar-conversion-branch, we first look at Scott's patch

2007-08-10  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * merge from conversion-branch: 
          store conversion sequences in Expression nodes:
          + fields scs, conversionKind added to Expression (elaborate.ast)
          + in Env::makeConvertedArg: copy conversions from ic to arg


2007-08-01  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * add latest-stable rule

        * minor changes

2007-07-24  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * update oast_header_version

        Elsa
        * serialize a link scope -> compound_info for those Scopes that
          are part of a CompoundType
        * the new link is obviously circular and nullable (but doesn't
          exist directly in C++)

        Asttools
        * adjusting

2007-07-23  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Asttools
        * renamed ast_util into ast_accessor, new module ast_util will
          contain not so trivial functions

        * fix upstream-import script -- however don't import those little
          changes 

2007-07-09  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * some more small snapshot fixes that should have been commited
        before releasing

2007-06-17  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * updated documentation
        * fixed some todo's
        * some snapshot fixes
        * released snapshot elsa-9-491-282-1045-2476-olmar-2007-06-17

2007-05-21  Hendrik Tews  <tews@tandem.cs.ru.nl>
