@@ -309,8 +309,16 @@ let ast_node_fun = function
 
 
   | MemberInit_type(_annot, _pQName, _argExpression_list, 
-		    _variable_opt_1, compound_opt, _variable_opt_2, 
+		    variable_opt_1, compound_opt, _variable_opt_2, 
 		    _full_expr_annot, _statement_opt) ->
+      (* it's either a member or base class init, therefore not both
+       * of variable_opt_1 and compound_opt is Some _
+       * Both can aparently be None if the member to initialize is a 
+       * template parameter.
+       *)
+      assert(match (variable_opt_1, compound_opt) with
+    	       | (Some _, Some _) -> false
+    	       | _ -> true);
       assert(match compound_opt with
 	       | None
 	       | Some(CompoundType _) -> true
