@@ -536,10 +536,18 @@ module Into_array = struct
 
     if visited annot then ()
     else begin
-	assert(match compound_opt with
-	  | None
-	  | Some(CompoundType _) -> true
-	  | _ -> false);
+      (* it's either a member or base class init, therefore not both
+       * of variable_opt_1 and compound_opt is Some _
+       * Both can aparently be None if the member to initialize is a 
+       * template parameter.
+       *)
+      assert(match (variable_opt_1, compound_opt) with
+    	       | (Some _, Some _) -> false
+    	       | _ -> true);
+      assert(match compound_opt with
+	       | None
+	       | Some(CompoundType _) -> true
+	       | _ -> false);
       ast_array.(id_annotation annot) <- MemberInit_type x;
       visit annot;
       pQName_fun ast_array pQName;
